# Electric_Resources

./: README.md
C语言/Project2/: Project2.sln
C语言/c语言课作业/: test1-1.c  test1-2.c  test1-3.c  test3-2.c  test4-1.c  test4-2.c  test4-3.c  test4-4.c  test4-5.c  test4-6.c  test4-7.c  test5-1.c  test5-2.c  test5-3.c  test6-4.c  testshuzu1-1.c  testshuzu1-2.c  testshuzu1-3.c  testshuzu1-4.c  text2-1.c  text2-2.c  text2-3.c  text3-1.c  text3-3.c  text3-4.c  text3-6.c  text3-8.c
C语言/dc程序/: 1.c  100-4-5.c  113-8.c  c1-1.c  first week test-1.c  first week test-2.c  p102-4-6.c  p103.c  p112-4.c  p112-5.c  p112-6.c  p113-10-1.c  p113-10-2.c  p113-11.c  p113-9.c  p117-5-2.c  p121.c  p126-5-4.c  p127-5-5.c  p128-5-6.c  p131-5-7.c  p131-5-7.cpp  p133-5-8.c  p135-5-9.c  p137-5-10.c  p138-5-11.c  (+85 more)
ESP32_project/VS_Code_project/esp32-s3_rtc-master/esp32-s3_rtc-master/door_bell_1/components/camera_ui/: CMakeLists.txt
ESP32_project/VS_Code_project/gsm-weather-esp32s3-esp-idf5.0-master/components/bsp_driver/: CMakeLists.txt  bsp_i2c1.c  bsp_i2c1.h  bsp_i2s.c  bsp_i2s.h  bsp_power.c  bsp_sd.c  bsp_sd.h
ESP32_project/VS_Code_project/gsm-weather-esp32s3-esp-idf5.0-master/components/i2s_test/: CMakeLists.txt  i2s_test.c  i2s_test.h
ESP32_project/VS_Code_project/gsm-weather-esp32s3-esp-idf5.0-master/components/lvgl_project/: CMakeLists.txt  lvgl_project.c  lvgl_project.h
ESP32_project/VS_Code_project/gsm-weather-esp32s3-esp-idf5.0-master/components/lvgl_project/font/: font_ChangYongHanZi_12.c  font_ChangYongHanZi_24.c
ESP32_project/VS_Code_project/gsm-weather-esp32s3-esp-idf5.0-master/components/lvgl_project/lv_demos-7.10.0/: lv_ex_conf.h  lv_examples.h
ESP32_project/VS_Code_project/gsm-weather-esp32s3-esp-idf5.0-master/components/lvgl_project/lv_demos-7.10.0/src/assets/: img_cogwheel_alpha16.c  img_cogwheel_argb.c  img_cogwheel_chroma_keyed.c  img_cogwheel_indexed16.c  img_cogwheel_rgb.c  img_hand.c  lv_font_montserrat_12_compr_az.c  lv_font_montserrat_16_compr_az.c  lv_font_montserrat_28_compr_az.c
ESP32_project/VS_Code_project/gsm-weather-esp32s3-esp-idf5.0-master/components/lvgl_project/lvgl_LaoHuangLi/: lvgl_LaoHuangLi.c  lvgl_LaoHuangLi.h
ESP32_project/VS_Code_project/gsm-weather-esp32s3-esp-idf5.0-master/components/lvgl_project/lvgl_LaoHuangLi/image/: bmp_WanNianLi_1.c  bmp_WanNianLi_2.c  bmp_WanNianLi_3.c  bmp_WanNianLi_4.c  bmp_WanNianLi_5.c  bmp_WanNianLi_6.c
ESP32_project/VS_Code_project/gsm-weather-esp32s3-esp-idf5.0-master/components/lvgl_project/lvgl_RiLi/: lvgl_RiLi.c  lvgl_RiLi.h  lvgl_RiLi_anim.c  lvgl_RiLi_anim.h
ESP32_project/VS_Code_project/gsm-weather-esp32s3-esp-idf5.0-master/components/lvgl_project/lvgl_SheZhi/: lvgl_SheZhi.c  lvgl_SheZhi.h
ESP32_project/VS_Code_project/gsm-weather-esp32s3-esp-idf5.0-master/components/lvgl_project/lvgl_SheZhi/lvgl_SheZhi_wifi/: lvgl_SheZhi_wifi.c
ESP32_project/VS_Code_project/gsm-weather-esp32s3-esp-idf5.0-master/components/lvgl_project/lvgl_SheZhi/lvgl_SheZhi_yuyan/: lvgl_SheZhi_yuyan.c
ESP32_project/VS_Code_project/gsm-weather-esp32s3-esp-idf5.0-master/components/lvgl_project/lvgl_ShuaXin/: lvgl_ShuaXin.c  lvgl_ShuaXin.h
ESP32_project/VS_Code_project/gsm-weather-esp32s3-esp-idf5.0-master/components/lvgl_project/lvgl_TianQi/: lvgl_TianQi.c
ESP32_project/VS_Code_project/gsm-weather-esp32s3-esp-idf5.0-master/components/lvgl_project/lvgl_YangShi/: lvgl_YangShi.c  lvgl_YangShi.h
ESP32_project/VS_Code_project/gsm-weather-esp32s3-esp-idf5.0-master/components/lvgl_project/lvgl_bilibili/: lvgl_bilibili.c  lvgl_bilibili.h  lvgl_bilibili_anim.c
ESP32_project/VS_Code_project/gsm-weather-esp32s3-esp-idf5.0-master/components/lvgl_project/lvgl_chulizhong/: lvgl_chulizhong.c
ESP32_project/VS_Code_project/gsm-weather-esp32s3-esp-idf5.0-master/components/lvgl_project/lvgl_clock/: lvgl_clock.c
ESP32_project/VS_Code_project/gsm-weather-esp32s3-esp-idf5.0-master/components/lvgl_project/lvgl_desktop/: lvgl_desktop.c  lvgl_desktop.h
ESP32_project/VS_Code_project/gsm-weather-esp32s3-esp-idf5.0-master/components/lvgl_project/lvgl_hint/: lvgl_hint.c
ESP32_project/VS_Code_project/gsm-weather-esp32s3-esp-idf5.0-master/components/lvgl_project/lvgl_shurufa/: lvgl_shurufa.c
ESP32_project/chatgpt_demo_esp/chatgpt_demo_esp/main/ui/: CMakeLists.txt  blue_cat_gif.c.c  filelist.txt  ui.c  ui.h  ui_events.c  ui_events.h  ui_helpers.c  ui_helpers.h  ui_themes.c  ui_themes.h
ESP32_project/chatgpt_demo_esp/chatgpt_demo_esp/main/ui/components/: ui_comp.c  ui_comp.h  ui_comp_changeaichat1.c  ui_comp_changeaichat1.h  ui_comp_hook.c  ui_comp_hook.h
ESP32_project/chatgpt_demo_esp/chatgpt_demo_esp/main/ui/fonts/: ui_font_Font2.c  ui_font_Fontshanchu.c  ui_font_MusicFont1.c  ui_font_MusicFont2.c  ui_font_fontwifi.c  ui_font_icon3.c  ui_font_icon4.c
ESP32_project/chatgpt_demo_esp/chatgpt_demo_esp/main/ui/images/: ui_img_reply_chatgpt_logo_png.c  ui_img_user_png.c
ESP32_project/chatgpt_demo_esp/chatgpt_demo_esp/main/ui/screens/: ui_AIChat.c  ui_AIchattext.c  ui_Calendar.c  ui_Memo.c  ui_Memotext.c  ui_Menu.c  ui_Music.c  ui_Volume.c  ui_Weather.c  ui_WiFi.c
ESP32_project/smart_home_panel-master/smart_home_panel-master/main/: CMakeLists.txt  Kconfig.projbuild  idf_component.yml  main.c
ESP32_project/smart_home_panel-master/smart_home_panel-master/main/app/: app_mqtt.c  app_mqtt.h  app_play_music.c  app_play_music.h  app_sntp.c  app_sr.c  app_sr_handler.c  app_ui_control.c  app_ui_control.h
ESP32_project/smart_home_panel-master/smart_home_panel-master/main/ui/: CMakeLists.txt  blue_cat_gif.c  filelist.txt  ui.c  ui.h  ui_events.h
ESP32_project/smart_home_panel-master/smart_home_panel-master/main/ui/fonts/: ui_font_HAPanel.c  ui_font_weatherWeek.c
ESP32_project/smart_home_panel-master/smart_home_panel-master/main/ui/images/: cat_wakenet_png.c  ui_img_backward_media_png.c  ui_img_cat_wait_png.c  ui_img_forward_media_png.c  ui_img_headphones_music_png.c  ui_img_right_arrow_png.c  ui_img_settings_icon_png.c
ESP32_project/smart_home_panel-master/smart_home_panel-master/main/ui/screens/: ui_Screen1.c  ui_Screen2.c  ui_Screen3.c  ui_Screen4.c
(+247 files in other folders)
