#添加头文件目录
idf_component_register(
    SRC_DIRS
    "."
    "lv_demos-7.10.0/src/assets"
    "lv_demos-7.10.0/src/lv_demo_stress"
    "lv_demos-7.10.0/src/lv_demo_printer"
    "lv_demos-7.10.0/src/lv_demo_printer/images"
    "lv_demos-7.10.0/src/lv_demo_music"
    "lv_demos-7.10.0/src/lv_demo_music/assets"
    "lv_demos-7.10.0/src/lv_demo_widgets"
    "font"
    "lvgl_global"
    "lvgl_YangShi"
    "lvgl_desktop"
    "lvgl_clock"
    "lvgl_RiLi"
    "lvgl_hint"
    "lvgl_bilibili"
    "lvgl_bilibili/image"
    "lvgl_ShuaXin"
    "image"
    "image/bmp_ShuaXin"
    "image/bmp_tianqi_40x40"
    "image/bmp_tianqi_80x80"
    "image/gif"
    "lvgl_LaoHuangLi"
    "lvgl_LaoHuangLi/image"
    "lvgl_TianQi"
    "lvgl_SheZhi"
    "lvgl_SheZhi/lvgl_SheZhi_wifi"
    "lvgl_SheZhi/lvgl_SheZhi_yuyan"
    "lvgl_shurufa"
    "lvgl_chulizhong"



    INCLUDE_DIRS
    "."
    "lv_demos-7.10.0/src/assets"
    "lv_demos-7.10.0/src/lv_demo_stress"
    "lv_demos-7.10.0/src/lv_demo_printer"
    "lv_demos-7.10.0/src/lv_demo_printer/images"
    "lv_demos-7.10.0/src/lv_demo_music"
    "lv_demos-7.10.0/src/lv_demo_music/assets"
    "lv_demos-7.10.0/src/lv_demo_widgets"
    "font"
    "lvgl_global"
    "lvgl_YangShi"
    "lvgl_desktop"
    "lvgl_clock"
    "lvgl_RiLi"
    "lvgl_hint"
    "lvgl_bilibili"
    "lvgl_bilibili/image"
    "lvgl_ShuaXin"
    "image"
    "image/bmp_ShuaXin"
    "image/bmp_tianqi_40x40"
    "image/bmp_tianqi_80x80"
    "image/gif"
    "lvgl_LaoHuangLi"
    "lvgl_LaoHuangLi/image"
    "lvgl_TianQi"
    "lvgl_SheZhi"
    "lvgl_SheZhi/lvgl_SheZhi_wifi"
    "lvgl_SheZhi/lvgl_SheZhi_yuyan"
    "lvgl_shurufa"
    "lvgl_chulizhong"

    REQUIRES lvgl my_system main json wpa_supplicant)
